Major package moves to stick to the MVC pattern

--- a/res/layout/number_picker.xml
+++ b/res/layout/number_picker.xml
@@ -22,12 +22,12 @@
         <LinearLayout android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <com.nullpointerengineering.android.pomodoro.widgets.NumberPickerButton
+            <com.nullpointerengineering.android.pomodoro.view.widgets.NumberPickerButton
                 android:id="@+id/increment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/timepicker_up_btn" />
-            <com.nullpointerengineering.android.pomodoro.widgets.NumberPickerButton
+            <com.nullpointerengineering.android.pomodoro.view.widgets.NumberPickerButton
                 android:id="@+id/decrement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
