--- a/res/layout/pomodoro.xml
+++ b/res/layout/pomodoro.xml
@@ -20,7 +20,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <com.nullpointerengineering.android.pomodoro.widgets.TimerFace
+    <com.nullpointerengineering.android.pomodoro.view.widgets.TimerFace
             android:id="@+id/timer_face"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
