--- a/res/layout/task_edit.xml
+++ b/res/layout/task_edit.xml
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:textSize="22sp"
                 android:text="@string/priority"/>
-            <com.nullpointerengineering.android.pomodoro.widgets.NumberPicker
+            <com.nullpointerengineering.android.pomodoro.view.widgets.NumberPicker
                 android:id="@+id/priority"
                 android:nextFocusUp="@+id/title"
                 android:nextFocusDown="@+id/work_units"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="22sp"
                 android:text="@string/work_units"/>
-            <com.nullpointerengineering.android.pomodoro.widgets.NumberPicker
+            <com.nullpointerengineering.android.pomodoro.view.widgets.NumberPicker
                 android:id="@+id/work_units"
                 android:nextFocusDown="@+id/confirm"
                 android:nextFocusUp="@+id/priority"
